Updated using Colaboratory

--- a/Model_Based_Reward_Signal_Back_Propagation.ipynb
+++ b/Model_Based_Reward_Signal_Back_Propagation.ipynb
@@ -41,6 +41,7 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "import gym\n",
+        "# import gym_ple\n",
         "\n",
         "from collections import deque\n",
         "\n",
