--- a/Model_Based_Reward_Signal_Back_Propagation.ipynb
+++ b/Model_Based_Reward_Signal_Back_Propagation.ipynb
@@ -79,8 +79,8 @@
       "metadata": {
         "id": "8E3mV7BYzcdt",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "4186a1a7-ed5f-4844-d14a-b7f9630508e6"
+        "outputId": "4186a1a7-ed5f-4844-d14a-b7f9630508e6",
+        "colab": {}
       },
       "source": [
         "# *******************************************************************************************\n",
@@ -478,8 +478,8 @@
         "scrolled": true,
         "id": "ptZGyAZmzceZ",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "1eaf4cab-db60-4766-ab91-e640d8a0491e"
+        "outputId": "1eaf4cab-db60-4766-ab91-e640d8a0491e",
+        "colab": {}
       },
       "source": [
         "# *******************************************************************************************\n",
@@ -515,8 +515,8 @@
         "scrolled": true,
         "id": "5Z5t0zlrzcej",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "20b35722-c127-432b-e822-3cd1e42afce5"
+        "outputId": "20b35722-c127-432b-e822-3cd1e42afce5",
+        "colab": {}
       },
       "source": [
         "# *******************************************************************************************\n",
@@ -551,8 +551,8 @@
       "metadata": {
         "id": "8K6HeHzFzcer",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "ca70050e-4d26-46e1-f858-ecce092b3b9c"
+        "outputId": "ca70050e-4d26-46e1-f858-ecce092b3b9c",
+        "colab": {}
       },
       "source": [
         "# *******************************************************************************************\n",
@@ -590,8 +590,8 @@
       "metadata": {
         "id": "UgTlITRyzcey",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "2291462b-bda5-4498-d09b-9ad08779c678"
+        "outputId": "2291462b-bda5-4498-d09b-9ad08779c678",
+        "colab": {}
       },
       "source": [
         "# *******************************************************************************************\n",
@@ -629,8 +629,8 @@
       "metadata": {
         "id": "qX40AiUEzce5",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "cd20b01b-c124-404c-9066-4e35c7263497"
+        "outputId": "cd20b01b-c124-404c-9066-4e35c7263497",
+        "colab": {}
       },
       "source": [
         "x = np.arange(-2.5, 2.5, 0.1)\n",
